# spectacle

./: .dockerignore  .gitignore  .prettierrc  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  ROADMAP.md  SKILL.md  TODO.md  eslint.config.ts  flake.nix  index.js  package-lock.json  package.json  test.yml  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml  npm-release.yml  release.yml  sourcey-godoc-release.yml
.plans/: distribution-blowup.md
.scafld/core/: OPERATORS.md  README.md  config.yaml
.scafld/prompts/: harden.md  review.md
app/helpers/: eachSorted.js  equal.js  htmlId.js  httpResponseCode.js  ifcontains.js  ifeq.js  ifin.js  ifneq.js  md.js  mdTraversal.js  printExample.js  printSchema.js  printSchemaReference.js  schemaDatatype.js  schemaRange.js  schemaReferenceContext.js  schemaReferenceHref.js  schemaResolveReference.js  schemaSubschemaName.js  (+3 more)
demo/: authentication.md  changelog.md  concepts.md  directives.md  introduction.md  quickstart.md  sourcey.config.ts  webhooks.md
docs/: changelog.md  configuration.md  install.md  introduction.md  roadmap.md  sourcey.config.ts
public/: index.html  spectacle.css
public.bak/: index.html  spectacle.min.js
rust/sourcey/: Cargo.toml  README.md
rust/sourcey-rustdoc/: Cargo.toml  README.md
rust/sourcey-rustdoc/src/: diagnostics.rs  doctest.rs  extract.rs  lib.rs  links.rs  main.rs  signature.rs  spec.rs
rust/sourcey-rustdoc/tests/: format_version.rs
rust/sourcey/src/: lib.rs
scripts/: check-cpp-reference-quality.mjs
src/: cli.ts  config.ts  dev-server.ts  index.ts  init.ts  site-assembly.ts  site-url.ts  swagger2openapi.d.ts  vite-plugin.ts
test/: config.test.ts  minimal.js  site-url.test.ts  test-json-reference.js  test-preprocessor-references.js  test-preprocessor.js  test-reference-contexts.js  test-resolve-references.js  test-urls.js  vite-plugin.test.ts
(+275 files in other folders)
