[package]
name = "sourcey-rustdoc"
version = "0.1.0"
edition = "2021"
description = "Convert nightly rustdoc JSON into a stable RustdocSpec snapshot. Powers sourcey's rustdoc() source adapter; works standalone for any tool that wants a stable Rust API surface representation."
license = "AGPL-3.0-only"
repository = "https://github.com/sourcey/sourcey"
homepage = "https://sourcey.com"
documentation = "https://sourcey.com/docs/adapters/rustdoc"
readme = "README.md"
keywords = ["rustdoc", "documentation", "json", "rust-api"]
categories = ["development-tools", "command-line-utilities"]
rust-version = "1.85"

[lib]
name = "sourcey_rustdoc"
path = "src/lib.rs"

[[bin]]
name = "sourcey-rustdoc"
path = "src/main.rs"

[dependencies]
rustdoc-types = "=0.57"
rustdoc-json = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
pulldown-cmark = "0.10"
time = { version = "0.3", features = ["formatting"] }
toml = "0.8"

[profile.release]
lto = "thin"
codegen-units = 1
