[package]
name = "sourcey"
version = "0.1.0"
edition = "2021"
description = "Native documentation tooling for Rust APIs. Companion crate to the sourcey static documentation generator; re-exports the rustdoc snapshot pipeline."
license = "AGPL-3.0-only"
repository = "https://github.com/sourcey/sourcey"
homepage = "https://sourcey.com"
documentation = "https://sourcey.com/docs"
readme = "README.md"
keywords = ["documentation", "rustdoc", "static-site", "api-docs"]
categories = ["development-tools"]
rust-version = "1.85"

[lib]
name = "sourcey"
path = "src/lib.rs"

[dependencies]
sourcey-rustdoc = { version = "0.1.0", path = "../sourcey-rustdoc" }
